AUTOMAKE_OPTIONS = dist-bzip2

SUBDIRS = maps

EXTRA_DIST = 

MAINTAINERCLEANFILES = aclocal.m4 config.guess config.sub config.status \
configure Makefile.in Makefile.dist.dbg config.log ltmain.sh \
stamp-h.in stamp-h install-sh missing mkinstalldirs

CLEANFILES = configure.dbg 

pkgdatadir = $(datadir)/@PARENTPACKAGE@
pkglibdir = $(libdir)/@PARENTPACKAGE@
pkgincludedir = $(includedir)/@PARENTPACKAGE@
